Add files via upload
cambiato getFirst e removeFirst con get(0) e remove(0), intellij non le riconosceva